<?xml version="1.0"?>
<package>
  <name>panther_led_controller</name>
  <version>0.0.1</version>
  <description>The panther_led_controller package</description>

  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>

  <license>BSD-3</license>

  <url type="website">http://rnext.it/panther</url>

  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosserial_arduino</build_depend>

  <run_depend>rosserial_arduino</run_depend>

</package>
