<?xml version="1.0"?>
<package>
  <name>panther_audio</name>
  <version>0.0.1</version>
  <description>The panther_audio package</description>

  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>

  <license>BSD-3</license>

  <url type="website">http://rnext.it/panther</url>

  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>sound_play</run_depend>
  

</package>
