<?xml version="1.0"?>
<package format="2">
  <name>panther_body</name>
  <version>1.0.0</version>
  <description>Panther body controller</description>

  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <license>MIT</license>
  
  <url type="website">https://rnext.it/panther</url>
  <url type="repository">https://github.com/rpanther/panther_robot</url>
  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>panther_common</run_depend>

</package>
