<?xml version="1.0"?>
<package format="2">
  <name>panther_drivers</name>
  <version>1.0.0</version>
  <description>Panther drivers collection. Configurations and roslaunches.</description>

  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <license>MIT</license>
  
  <url type="website">https://rnext.it/panther</url>
  <url type="repository">https://github.com/rpanther/panther_hardware</url>
  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roboteq_control</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>imu_transformer</exec_depend>
  <exec_depend>razor_imu_9dof</exec_depend>
  <exec_depend>sound_play</exec_depend>

  <exec_depend>panther_description</exec_depend>
  <exec_depend>panther_control</exec_depend>
  <exec_depend>panther_joystick</exec_depend>
  <exec_depend>panther_body</exec_depend>

</package>
