<?xml version="1.0"?>
<package>
  <name>panther_hardware</name>
  <version>0.0.1</version>
  <description>The panther_hardware package</description>

  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>

  <license>BSD-3</license>

  <url type="website">http://rnext.it/panther</url>

  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sound_play</run_depend>
  

</package>
