<?xml version="1.0"?>
<package>
  <name>panther_hardware</name>
  <version>1.0.0</version>
  <description>External hardware controller</description>

  <license>MIT</license>
  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <url type="repository">https://github.com/rbonghi/panther</url>
  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sound_play</run_depend>
  

</package>
