<?xml version="1.0"?>
<package format="2">
  <name>panther_led_controller</name>
  <version>0.0.1</version>
  <description>The panther_led_controller package</description>

  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>

  <license>BSD-3</license>

  <url type="website">http://rnext.it/panther</url>

  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<depend>rosserial_arduino</depend>-->
  <depend>rosserial_client</depend>
  <depend>rosserial_python</depend>

</package>
