<?xml version="1.0"?>
<package format="2">
  <name>panther_led_controller</name>
  <version>1.0.0</version>
  <description>Panther controller led</description>

  <license>MIT</license>
  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <url type="repository">https://github.com/rbonghi/panther</url>
  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<depend>rosserial_arduino</depend>-->
  <depend>rosserial_client</depend>
  <depend>rosserial_python</depend>

</package>
