<?xml version="1.0"?>
<package format="2">
  <name>panther_led_controller</name>
  <version>1.0.0</version>
  <description>Panther LED controller</description>

  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <license>MIT</license>
  
  <url type="website">https://rnext.it/panther</url>
  <url type="repository">https://github.com/rpanther/panther_hardware</url>
  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosserial_arduino</depend>
  <depend>rosserial_client</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosserial_python</depend>

</package>
