<?xml version="1.0"?>
<package>
  <name>panther_robot</name>
  <version>1.0.0</version>
  <description>Panther meta package provides all the basic drivers for running and using a this robot</description>

  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <license>MIT</license>
  
  <url type="website">https://rnext.it/panther</url>
  <url type="repository">https://github.com/rpanther/panther_robot</url>
  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>panther_body</run_depend>
  <run_depend>panther_drivers</run_depend>
  <run_depend>panther_joystick</run_depend>
  <run_depend>panther_bringup</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
